@@ -1,3 +1,4 @@
+* Use immutable datastructures for Dict and MultiSelection fields
 * Skip warnings for non-interactive operations
 * Check rule only if _check_access is set
 * Add statistics to Cache
